# anki-readable-addons-folder

./: .gitignore  README.md  config.json  config.md  config.py  config.schema.json  pyproject.toml  readableAddons.py
src/: __init__.py  config.json  config.md
